--- a/testsite/templates/elver/apk.html
+++ b/testsite/templates/elver/apk.html
@@ -8,49 +8,44 @@
     <div class="container-xl">
         <div class="card">
             <div class="card-header">
-                <div class="col_10">
-                    <div class="row">
-                        <div class="col-md-6 col-xl-12">
-                            <label class="form-label">项目</label>
-                            <select type="text" class="form-select" style="width: auto" placeholder="Select a date"  value="">
-                                <option value="HTML">项目Aaaaaa</option>
-                            </select>
-                        </div>
-                     </div>
+                <div class="input-group" style="width: 25%">
+                    <div class="input-group-text">项目</div>
+                    <select class="select2-selection--single" data-placeholder="Choose one thing">
+                        <option>全部</option>
+                        <option>项目Aaaaaa</option>
+                    </select>
                 </div>
-                <div class="col_10">
-                    <div class="row">
-                        <div class="col-md-6 col-xl-12">
-                            <label class="form-label">版本</label>
-                            <select type="text" class="form-select" style="width: auto" placeholder="Select a date"  value="">
-                                <option value="HTML">1.0.0.0</option>
-                            </select>
-                        </div>
-                     </div>
+                <div class="input-group ml_15" style="width: 20%">
+                    <div class="input-group-text">环境</div>
+                    <select class="select2-selection--single" data-placeholder="Choose one thing"  style="width: auto">
+                        <option>全部</option>
+                        <option>测试</option>
+                        <option>正式</option>
+                    </select>
                 </div>
-                <div class="col_10">
-                    <div class="row">
-                        <div class="col-md-6 col-xl-12">
-                            <label class="form-label">环境</label>
-                            <select type="text" class="form-select" style="width: auto" placeholder="Select a date"  value="">
-                                <option value="HTML">测试</option>
-                                <option value="HTML">正式</option>
-                            </select>
-                        </div>
-                     </div>
+                <div class="input-group ml_15" style="width: 20%">
+                    <div class="input-group-text">平台</div>
+                    <select class="select2-selection--single" data-placeholder="Choose one thing"  style="width: auto">
+                        <option>全部</option>
+                        <option>android</option>
+                        <option>ios</option>
+                    </select>
                 </div>
-                <div class="col_10">
-                    <div class="row">
-                        <div class="col-md-6 col-xl-12">
-                            <label class="form-label">平台</label>
-                            <select type="text" class="form-select" style="width: auto" placeholder="Select a date"  value="">
-                                <option value="HTML">android</option>
-                                <option value="HTML">ios</option>
-                            </select>
-                        </div>
-                     </div>
+                <div class="input-group ml_15" style="width: 20%">
+                    <div class="input-group-text">版本</div>
+                    <select class="select2-selection--single" data-placeholder="Choose one thing"  style="width: auto">
+                        <option>全部</option>
+                        <option>1.0.0.22</option>
+                    </select>
+                </div>
+                <div class="input-icon ml_15" style="width: 40%">
+                    <input type="text" class="form-control form-control-rounded" placeholder="Search…">
+                    <span class="input-icon-addon">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><circle cx="10" cy="10" r="7" /><line x1="21" y1="21" x2="15" y2="15" /></svg>
+                    </span>
                 </div>
             </div>
+
             <div class="card-body">
                 <div class="d-flex border-bottom py-1">
                     <div class="text-muted">
@@ -74,12 +69,16 @@
                     </div>
                     <div class="ms-auto text-muted">
                         <div class="ms-2 d-inline-block">
-                            <a style="cursor: pointer" id="new_apk" data-bs-toggle="modal" data-bs-target="#modal-report">
-                                <svg t="1635404150976" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="36687" width="200" height="200"><path d="M227.5328 28.4672A199.1168 199.1168 0 0 0 28.4672 227.5328v568.9344a199.1168 199.1168 0 0 0 199.0656 199.0656h568.9344a199.1168 199.1168 0 0 0 199.0656-199.0656V227.5328A199.1168 199.1168 0 0 0 796.4672 28.4672H227.5328z m0-28.4672h568.9344A227.5328 227.5328 0 0 1 1024 227.5328v568.9344A227.5328 227.5328 0 0 1 796.4672 1024H227.5328A227.5328 227.5328 0 0 1 0 796.4672V227.5328A227.5328 227.5328 0 0 1 227.5328 0z" fill="#008EFE" p-id="36688"></path><path d="M563.2 460.8V256a51.2 51.2 0 0 0-102.4 0v204.8H256a51.2 51.2 0 0 0 0 102.4h204.8v204.8a51.2 51.2 0 0 0 102.4 0v-204.8h204.8a51.2 51.2 0 0 0 0-102.4h-204.8z" fill="#008EFE" p-id="36689"></path></svg>
+                            <a style="cursor: pointer;margin-right: 10px" id="refresh">
+                                <svg t="1635427476087" class="icon icon_apk" viewBox="0 0 1194 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="33996" width="200" height="200"><path d="M1094.910175 497.664877c0-104.362493-32.341279-201.386331-87.466521-281.343531-0.853332-1.365331-1.365331-2.815995-2.047996-4.01066a606.718989 606.718989 0 0 0-22.015964-28.159953 34.21861 34.21861 0 0 1-2.389329-3.413328A497.748504 497.748504 0 0 0 795.049342 41.132305l-5.973324-2.559996A599.380334 599.380334 0 0 0 753.83341 25.601664C749.737417 24.236333 745.470758 22.785669 741.204098 21.505671A491.433848 491.433848 0 0 0 709.97215 13.313684C703.998827 12.033687 698.19617 10.497689 692.308179 9.388358c-2.901328-0.511999-5.546657-1.365331-8.533319-1.877331C675.838874 6.145696 668.158886 5.377698 660.137566 4.439033 654.676242 3.8417 649.470918 2.988368 643.92426 2.391036a519.8498 519.8498 0 0 0-39.509267-2.047997C602.025663 0.343039 599.636334 0.001707 597.247005 0.001707a493.311178 493.311178 0 0 0-285.439525 90.026516 59.733234 59.733234 0 1 0 68.693219 97.791837 375.124708 375.124708 0 0 1 252.927579-66.474556c3.413328 0.256 6.570656 0.853332 9.983983 1.279998 8.959985 1.109331 17.91997 2.303996 26.709289 4.181327 3.839994 0.682666 7.679987 1.706664 11.434647 2.559995 8.703985 1.962663 17.237305 4.01066 25.599958 6.485323 2.815995 0.853332 5.375991 1.706664 7.935987 2.730662 9.727984 3.157328 19.199968 6.485323 28.415952 10.410649 1.023998 0.256 1.962663 0.938665 2.901329 1.279998a379.7327 379.7327 0 0 1 143.359761 107.775821 377.002038 377.002038 0 0 1 85.930523 239.6156h-99.7545l159.573067 239.018269L1194.664676 497.75021h-99.754501zM814.334643 807.680361a376.319373 376.319373 0 0 1-221.610298 68.266552c-10.410649-0.256-20.650632-1.023998-30.975948-1.706663l-12.458646-1.706664a317.183471 317.183471 0 0 1-23.893293-3.669327c-4.863992-0.853332-9.727984-2.218663-14.42131-3.413328-7.679987-1.621331-15.359974-3.327994-22.869295-5.546658l-10.495982-3.839993a290.303516 290.303516 0 0 1-25.770624-9.301318l-5.546657-2.303996a643.326928 643.326928 0 0 1-28.927952-13.994643l-1.109332-0.682666a377.770037 377.770037 0 0 1-86.186523-64.597226l-1.279998-1.365331a315.476808 315.476808 0 0 1-26.965288-30.549282 376.319373 376.319373 0 0 1-82.773195-235.519608h99.583834l-159.317068-238.932935L0 497.75021h99.498501c0 104.618492 32.767945 201.642331 88.149186 282.026197 0.682666 1.194665 1.109331 2.559996 1.87733 3.498661 5.717324 8.362653 12.117313 15.871974 18.261303 23.551961 2.389329 2.815995 4.351993 5.631991 6.826656 8.789318a553.897744 553.897744 0 0 0 31.317281 34.21861c33.365278 33.450611 70.997215 61.439898 111.957147 84.053193l3.327994 1.706664c11.77598 6.399989 23.893294 12.28798 36.181273 17.578637l9.045318 4.01066a805.71599 805.71599 0 0 0 47.701254 17.151972c9.471984 2.730662 19.199968 5.119991 29.013285 7.423987 6.570656 1.450664 12.799979 3.157328 19.541301 4.351993 2.730662 0.682666 5.290658 1.535997 7.935987 1.791997 9.386651 1.706664 18.602636 2.559996 27.81862 3.669327 3.413328 0.597332 6.655989 1.194665 9.983983 1.535998a494.079177 494.079177 0 0 0 334.335443-87.637187 59.733234 59.733234 0 0 0-68.437219-97.791837z" fill="#7996F5" p-id="33997"></path></svg>
                             </a>
-                            <a  id="del_apk" style="margin-left: 10px;margin-right: 10px;cursor: pointer" data-bs-toggle="modal" data-bs-target="#modal-danger">
-                                <svg t="1635405005117" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="58150" width="200" height="200"><path d="M512 0c282.7776 0 512 229.2224 512 512 0 282.7776-229.2224 512-512 512C229.2224 1024 0 794.7776 0 512 0 229.2224 229.2224 0 512 0z m-145.066667 324.266667H221.866667v51.2h76.8v426.871466h443.733333V375.466667H819.2v-51.2h-145.066667v-119.7568h-307.2V324.266667z m51.2 0v-68.5568h204.8V324.266667h-204.8z m273.066667 51.2v375.671466h-341.333333V375.466667h341.333333zM426.666667 460.8v221.866667h51.2V460.8h-51.2z m136.533333 0v221.866667h51.2V460.8h-51.2z" fill="#FF5E57" p-id="58151"></path></svg>
+                            <a style="margin-right: 10px;cursor: pointer" id="new_apk" data-bs-toggle="modal" data-bs-target="#modal-report">
+                                <svg t="1635404150976" class="icon icon_apk" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="36687" width="200" height="200"><path d="M227.5328 28.4672A199.1168 199.1168 0 0 0 28.4672 227.5328v568.9344a199.1168 199.1168 0 0 0 199.0656 199.0656h568.9344a199.1168 199.1168 0 0 0 199.0656-199.0656V227.5328A199.1168 199.1168 0 0 0 796.4672 28.4672H227.5328z m0-28.4672h568.9344A227.5328 227.5328 0 0 1 1024 227.5328v568.9344A227.5328 227.5328 0 0 1 796.4672 1024H227.5328A227.5328 227.5328 0 0 1 0 796.4672V227.5328A227.5328 227.5328 0 0 1 227.5328 0z" fill="#008EFE" p-id="36688"></path><path d="M563.2 460.8V256a51.2 51.2 0 0 0-102.4 0v204.8H256a51.2 51.2 0 0 0 0 102.4h204.8v204.8a51.2 51.2 0 0 0 102.4 0v-204.8h204.8a51.2 51.2 0 0 0 0-102.4h-204.8z" fill="#008EFE" p-id="36689"></path></svg>
                             </a>
+                            <a  id="del_apk" style="margin-right: 10px;cursor: pointer" data-bs-toggle="modal" data-bs-target="#modal-danger">
+                                <svg t="1635405005117" class="icon icon_apk" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="58150" width="200" height="200"><path d="M512 0c282.7776 0 512 229.2224 512 512 0 282.7776-229.2224 512-512 512C229.2224 1024 0 794.7776 0 512 0 229.2224 229.2224 0 512 0z m-145.066667 324.266667H221.866667v51.2h76.8v426.871466h443.733333V375.466667H819.2v-51.2h-145.066667v-119.7568h-307.2V324.266667z m51.2 0v-68.5568h204.8V324.266667h-204.8z m273.066667 51.2v375.671466h-341.333333V375.466667h341.333333zM426.666667 460.8v221.866667h51.2V460.8h-51.2z m136.533333 0v221.866667h51.2V460.8h-51.2z" fill="#FF5E57" p-id="58151"></path></svg>
+                            </a>
+
                         </div>
                       </div>
                     </div>
@@ -120,20 +119,20 @@
                                         <button class="btn dropdown-toggle align-text-top" data-bs-boundary="viewport" data-bs-toggle="dropdown">更多</button>
                                         <div class="dropdown-menu dropdown-menu-end">
                                             <a class="dropdown-item" href="#">
-                                                <svg t="1635393574375" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="9015" width="200" height="200"><path d="M777.1648 901.376H257.9456c-90.4704 0-163.84-73.3696-163.84-163.84v-130.2016h846.8992v130.2016c0 90.4704-73.3696 163.84-163.84 163.84z" fill="#FFF7E6" p-id="9016"></path><path d="M777.1648 901.376H257.9456c-90.4704 0-163.84-73.3696-163.84-163.84v-10.3936h846.8992v10.3936c0 90.4704-73.3696 163.84-163.84 163.84z" fill="#FD973F" p-id="9017"></path><path d="M777.6256 926.976H257.4336c-104.192 0-188.9792-84.7872-188.9792-188.9792v-130.6624c0-14.1312 11.4688-25.6 25.6-25.6s25.6 11.4688 25.6 25.6v130.6624c0 75.9808 61.7984 137.7792 137.7792 137.7792h520.192c75.9808 0 137.7792-61.7984 137.7792-137.7792v-130.6624c0-14.1312 11.4688-25.6 25.6-25.6s25.6 11.4688 25.6 25.6v130.6624c0 104.192-84.7872 188.9792-188.9792 188.9792z" fill="#44454A" p-id="9018"></path><path d="M724.8896 393.2672a25.56928 25.56928 0 0 0-36.1984-0.1024l-145.1008 144.1792V123.4944c0-14.1312-11.4688-25.6-25.6-25.6s-25.6 11.4688-25.6 25.6v406.4256c-14.2848-13.9264-30.3616-29.5936-46.592-45.312C343.552 385.6896 342.4768 385.6896 329.2672 385.6896a25.61024 25.61024 0 0 0-12.1856 48.128c15.5136 12.1856 106.8544 100.352 186.9824 179.2512 4.9664 4.9152 11.4688 7.3728 17.9712 7.3728 6.5024 0 13.056-2.4576 18.0224-7.424l184.6784-183.5008a25.58976 25.58976 0 0 0 0.1536-36.2496z" fill="#44454A" p-id="9019"></path></svg>
-                                                下载
+                                                <svg t="1635414954457" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4949" width="200" height="200"><path d="M704 277.3c0-23.6 19.1-42.7 42.7-42.7s42.7 19.1 42.7 42.7-19.1 42.7-42.7 42.7-42.7-19.1-42.7-42.7zM277.3 704c23.6 0 42.7 19.1 42.7 42.7s-19.1 42.7-42.7 42.7-42.7-19.1-42.7-42.7 19.1-42.7 42.7-42.7z m277.4 192c0-23.6 19.1-42.7 42.7-42.7 12.2 0 42.7 0.9 42.7 0.9V896c0 23.6-19.1 42.7-42.7 42.7s-42.7-19.1-42.7-42.7zM896 640c-23.6 0-42.7-19.1-42.7-42.7s19.1-42.7 42.7-42.7 42.7 19.1 42.7 42.7S919.6 640 896 640z m-298.7-85.3c23.6 0 42.7 19.1 42.7 42.7V640h-42.7c-23.6 0-42.7-19.1-42.7-42.7s19.1-42.6 42.7-42.6zM896 725.3c23.6 0 42.7 19.1 42.7 42.7v128c0 5.9-1.2 11.5-3.4 16.6 0 0.1-0.2 0.2-0.2 0.3-2.1 5-5.2 9.5-8.9 13.3-1.4 1.4-3.4 2.1-4.9 3.4-2.8 2-5.4 4.4-8.6 5.8-5.1 2.2-10.7 3.4-16.6 3.4H768c-23.6 0-42.7-19.1-42.7-42.7v-42.7h128V768c0-23.6 19.1-42.7 42.7-42.7z m-170.7-42.6v170.7l-85.3 0.9V640h42.7c23.6 0 42.6 19.1 42.6 42.7zM234.7 277.3c0-23.6 19.1-42.7 42.7-42.7s42.7 19.1 42.7 42.7-19.2 42.7-42.8 42.7c-23.6 0-42.6-19.1-42.6-42.7z" fill="#00A2FF" p-id="4950"></path><path d="M213.3 554.7h128c70.7 0 128 57.3 128 128v128c0 70.7-57.3 128-128 128h-128c-70.7 0-128-57.3-128-128v-128c0-70.7 57.3-128 128-128z m0 85.3c-23.6 0-42.7 19.1-42.7 42.7v128c0 23.6 19.1 42.7 42.7 42.7h128c23.6 0 42.7-19.1 42.7-42.7v-128c0-23.6-19.1-42.7-42.7-42.7h-128zM682.7 85.3h128c70.7 0 128 57.3 128 128v128c0 70.7-57.3 128-128 128h-128c-70.7 0-128-57.3-128-128v-128c0-70.7 57.3-128 128-128z m0 85.4c-23.6 0-42.7 19.1-42.7 42.7v128c0 23.6 19.1 42.7 42.7 42.7h128c23.6 0 42.7-19.1 42.7-42.7v-128c0-23.6-19.1-42.7-42.7-42.7h-128zM213.3 85.3h128c70.7 0 128 57.3 128 128v128c0 70.7-57.3 128-128 128h-128c-70.7 0-128-57.3-128-128v-128c0-70.7 57.3-128 128-128z m0 85.4c-23.6 0-42.7 19.1-42.7 42.7v128c0 23.6 19.1 42.7 42.7 42.7h128c23.6 0 42.7-19.1 42.7-42.7v-128c0-23.6-19.1-42.7-42.7-42.7h-128z" fill="#666666" p-id="4951"></path></svg>
+                                                扫码下载
                                             </a>
                                             <a class="dropdown-item" href="#">
                                                 <svg t="1635393032372" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="745" width="200" height="200"><path d="M694.624 64L832 201.376V272h80v96h65.984l-67.744 576H113.76l-67.744-576H112v-192H192V64h502.624z m247.36 336H81.984l60.224 512h739.552l60.224-512zM192 208H144v160H192v-160z m640 160h48v-64H832v64zM670.368 96H224v271.904h576l-0.032-137.984h-65.6a64 64 0 0 1-64-64V96z" fill="#646E7F" p-id="746"></path><path d="M584 776a80 80 0 1 1-96-78.4v-209.6h80v64h-48v32h48v64h-48v49.6a80.032 80.032 0 0 1 63.84 73.152z m-48 0a32 32 0 1 0-64 0 32 32 0 0 0 64 0z" fill="#B720E0" p-id="747"></path></svg>
-                                                解压
+                                                资源解压
                                             </a>
                                             <a class="dropdown-item" href="#">
                                                 <svg t="1635399995661" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="13710" width="200" height="200"><path d="M411.733333 808.533333l-196.266666 74.666667 74.666666-196.266667 407.466667-407.466666 121.6 121.6zM849.066667 371.2l-121.6-121.6 44.8-44.8c34.133333-34.133333 87.466667-34.133333 121.6 0 34.133333 34.133333 34.133333 87.466667 0 121.6l-44.8 44.8z" fill="#1890FF" p-id="13711"></path><path d="M874.666667 917.333333H149.333333c-23.466667 0-42.666667-19.2-42.666666-42.666666s19.2-42.666667 42.666666-42.666667h725.333334c23.466667 0 42.666667 19.2 42.666666 42.666667s-19.2 42.666667-42.666666 42.666666z" fill="#FFC53D" p-id="13712"></path></svg>
-                                                编辑
+                                                编辑记录
                                             </a>
                                             <a class="dropdown-item " href="#">
                                                 <svg t="1635400029781" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="17941" width="200" height="200"><path d="M877.79 217.23H624.22c0-36.02-29.2-65.23-65.23-65.23H465c-36.02 0-65.23 29.2-65.23 65.23H146.21c-18.01 0-32.61 14.6-32.61 32.61 0 18.01 14.6 32.61 32.61 32.61h49.75l14.43 528.79c1.06 33.91 25.21 60.76 54.64 60.76h493.93c29.43 0 53.58-26.86 54.64-60.76l14.48-528.79h49.7c18.01 0 32.61-14.6 32.61-32.61 0.01-18.01-14.59-32.61-32.6-32.61zM364.24 748.41c-17.98 0.82-33.4-10.01-34.44-24.19L308 427.56c-1.04-14.18 12.69-26.34 30.67-27.16 17.98-0.82 33.4 10.01 34.45 24.19l21.8 296.67c1.04 14.17-12.7 26.33-30.68 27.15z m180.37-25.42c0 14.2-14.6 25.72-32.61 25.72-18.01 0-32.61-11.51-32.61-25.72V425.83c0-14.2 14.6-25.72 32.61-25.72 18.01 0 32.61 11.51 32.61 25.72v297.16zM716 427.56l-21.8 296.67c-1.04 14.18-16.46 25.01-34.44 24.19-17.98-0.82-31.71-12.98-30.67-27.16l21.8-296.67c1.04-14.18 16.46-25.01 34.44-24.19 17.98 0.82 31.72 12.98 30.67 27.16z" fill="#FF5D5D" p-id="17942"></path></svg>
-                                                删除
+                                                删除记录
                                             </a>
                                         </div>
                                     </span>
