--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
     <link href="/static/tabler/dist/css/demo.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
     <link href="/static/tabler/dist/css/demo.min.css" rel="stylesheet"/>
+    <!-- Select2-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.1.1/dist/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.1.1/dist/select2-bootstrap-5-theme.rtl.min.css" />
+
     <!-- Elver CSS files -->
     <link href="/static/css/common.css" rel="stylesheet"/>
     {% block style %}{% endblock %}
@@ -286,6 +291,10 @@
 <!-- Tabler Core -->
 <script src="/static/tabler/dist/js/tabler.min.js"></script>
 
+<!-- Select2-->
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+
 <!-- 模块切换高亮 -->
 <script>
      $('a').each(function(){
@@ -296,5 +305,20 @@
         }
      });
 </script>
+<!-- select2 -->
+<script>
+    $(document).ready(function() {
+        $('.select2-selection--single').select2({
+            theme: "bootstrap-5",
+            containerCssClass: "select2--nomal",
+            selectionCssClass: "select2--nomal",
+            dropdownCssClass: "select2--nomal",
+        });
+        $('.js-example-basic-multiple').select2({
+            theme: "bootstrap-5"
+        });
+    });
+</script>
+
 </body>
 </html>
