--- a/testsite/templates/elver/builder-detail.html
+++ b/testsite/templates/elver/builder-detail.html
@@ -45,7 +45,7 @@ Elver-debug
                         构建队列</a>
                       <div class="dropdown-divider"></div>
                       <li class="nav-item">
-                          <a href="#" class="nav-link">#5
+                          <a href="/builder_step/" class="nav-link">#5
                               <span class="ms-auto">
                                   <svg t="1635220770244" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="333470" width="200" height="200"><path d="M880.8 220.8v78.4c0 12-9.6 21.6-21.6 21.6-12 0-21.6-9.6-21.6-21.6v-78.4c0-51.2-41.6-92-92.8-92H215.2c-51.2 0-92.8 41.6-92.8 92v528.8c0 51.2 41.6 92 92.8 92h85.6c12 0 21.6 9.6 21.6 21.6 0 12-9.6 21.6-21.6 21.6H215.2c-74.4 0-135.2-60.8-135.2-135.2V220.8c0-68.8 52-125.6 118.4-133.6 5.6-0.8 11.2-0.8 16.8-0.8h532.8c72.8 0 132.8 60 132.8 134.4zM215.2 85.6c-5.6 0-12 0-16.8 0.8 2.4-0.8 4-0.8 6.4-0.8h10.4z" p-id="333471"></path><path d="M664.8 350.4c-172.8 0-312.8 139.2-312.8 312s140 312.8 313.6 312.8c172.8 0 313.6-140 313.6-312.8-0.8-172.8-140.8-312-314.4-312z m217.6 351.2H648.8c-2.4 1.6-5.6 3.2-8.8 3.2-4 0-8-1.6-10.4-4.8-4.8-2.4-8-7.2-8-12.8 0-4 1.6-8 4-10.4V524c0-8 6.4-14.4 14.4-14.4s14.4 6.4 14.4 14.4v148.8h227.2c8 0 14.4 6.4 14.4 14.4s-6.4 14.4-13.6 14.4zM277.6 301.6h171.2c12 0 21.6-9.6 21.6-21.6s-9.6-21.6-21.6-21.6H277.6c-12 0-21.6 9.6-21.6 21.6s9.6 21.6 21.6 21.6zM369.6 367.2c0-12-9.6-21.6-21.6-21.6h-70.4c-12 0-21.6 9.6-21.6 21.6s9.6 21.6 21.6 21.6h70.4c12 0 21.6-9.6 21.6-21.6z" p-id="333472"></path></svg>
                               </span>
@@ -53,7 +53,7 @@ Elver-debug
                       </li>
                       <div class="dropdown-divider"></div>
                       <li class="nav-item">
-                          <a href="#" class="nav-link active">#4
+                          <a href="/builder_step/" class="nav-link active">#4
                               <div class="progress " style="margin-left: 5px">
                                   <div class="progress-bar progress-bar-indeterminate bg-blue"></div>
                               </div>
@@ -66,58 +66,23 @@ Elver-debug
             <div style="width: 80%">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">项目 Elver-debug</h3>
+                        <h3 class="card-title">构建参数</h3>
                     </div>
                     <div class="card-body">
                         <div class="row">
                           <div class="col-md-6 col-xl-12">
-                            <div class="mb-3">
-                              <label class="form-label">Static</label>
-                              <div class="form-control-plaintext">Input value</div>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label">Text</label>
-                              <input type="text" class="form-control" name="example-text-input" placeholder="Input placeholder">
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label">Password</label>
-                              <input type="text" class="form-control" name="example-password-input" placeholder="Input placeholder">
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label">Disabled</label>
-                              <input type="text" class="form-control" name="example-disabled-input" placeholder="Disabled..."
-	       value="Well, she turned me into a newt." disabled>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label">Readonly</label>
-                              <input type="text" class="form-control" name="example-disabled-input" placeholder="Readonly..."
-	       value="Well, how'd you become king, then?" readonly>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label required">Required</label>
-                              <input type="text" class="form-control" name="example-required-input" placeholder="Required..." >
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label">Textarea <span class="form-label-description">56/100</span></label>
-                              <textarea class="form-control" name="example-textarea-input" rows="6" placeholder="Content..">Oh! Come and see the violence inherent in the system! Help, help, I'm being repressed! We shall say 'Ni' again to you, if you do not appease us. I'm not a witch. I'm not a witch. Camelot!</textarea>
-                            </div>
                               <div class="mb-3">
-                            <label class="form-label">Tags input</label>
-                            <select type="text" class="form-select" placeholder="Select a date" id="select-tags" value="">
-                              <option value="HTML">HTML</option>
-                              <option value="JavaScript">JavaScript</option>
-                              <option value="CSS">CSS</option>
-                              <option value="jQuery">jQuery</option>
-                              <option value="Bootstrap">Bootstrap</option>
-                              <option value="Ruby">Ruby</option>
-                              <option value="Python">Python</option>
-                            </select>
-                          </div>
+                                  <label class="form-label">标题</label>
+                                  <input type="text" class="form-control" name="example-text-input" placeholder="Input placeholder">
+                              </div>
+                              <div class="mb-3">
+                                  <label class="form-label">版本</label>
+                                  <input type="text" class="form-control" name="example-text-input" placeholder="Input placeholder">
+                              </div>
                               <div class="form-footer">
                                   <button type="submit" class="btn btn-primary">构建</button>
                               </div>
-                        </div>
-
+                          </div>
                       </div>
                     </div>
                 </div>
@@ -230,5 +195,7 @@ Elver-debug
 
 
 {% block script %}
-
+<script>
+    $('#builder_tab').addClass('active');
+</script>
 {% endblock %}
