--- a/testsite/templates/elver/builder-steps.html
+++ b/testsite/templates/elver/builder-steps.html
@@ -136,4 +136,7 @@ Commit message: "debug=false"
 
 
 {% block script %}
+<script>
+    $('#builder_tab').addClass('active');
+</script>
 {% endblock %}
