--- a/testsite/templates/elver/builder.html
+++ b/testsite/templates/elver/builder.html
@@ -144,9 +144,7 @@
                                             </tr>
                                             <tr>
                                                 <td data-label="Status" >
-                                                    <div class="progress " style="margin-left: 5px">
-                                                        <div class="progress-bar progress-bar-indeterminate bg-blue"></div>
-                                                    </div>
+                                                    <div class="loader2"></div>
                                                 </td>
                                                 <td data-label="Name" >
                                                     <div class="d-flex py-1 align-items-center">
