--- a/testsite/templates/elver/sign-in.html
+++ b/testsite/templates/elver/sign-in.html
@@ -66,7 +66,8 @@
           </div>
         </form>
         <div class="text-center text-muted mt-3">
-          Don't have account yet? <a href="/sign_up/">Sign up</a>
+          Don't have account yet?
+          <a href="/sign_up/">Sign up</a>
         </div>
       </div>
     </div>
