--- a/templates/base.html
+++ b/templates/base.html
@@ -77,12 +77,16 @@
                         </div>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                        <a href="#" class="dropdown-item">Set status</a>
-                        <a href="#" class="dropdown-item">Profile & account</a>
-                        <a href="#" class="dropdown-item">Feedback</a>
+                        <a href="/setting/" class="dropdown-item">
+                            <svg t="1635665715784" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3560" width="200" height="200"><path d="M915.056 416l-78.768 0c-7.424-16-17.952-49.28-31.424-72.992l55.632-54.064c17.568-17.568 17.584-45.2 0.032-62.736l-63.504-63.12c-17.536-17.536-45.968-17.344-63.536 0.208l-52.528 55.712C657.28 205.552 624 195.104 608 187.68L608 108.928C608 84.096 581.696 64 556.912 64l-89.808 0C442.304 64 416 84.096 416 108.928l0 78.768c-16 7.424-49.264 17.952-72.976 31.408l-54.08-55.632c-17.568-17.568-45.216-17.568-62.736-0.032l-63.12 63.52c-17.52 17.52-17.36 45.952 0.208 63.536l55.728 52.528C205.552 366.736 195.12 400 187.696 416L108.944 416C84.096 416 64 442.304 64 467.088l0 89.808C64 581.68 84.096 608 108.944 608l78.768 0c7.424 16 17.968 49.264 31.408 72.976l-55.632 54.096c-17.568 17.568-17.568 45.184-0.032 62.72l63.504 63.136c17.52 17.52 45.968 17.344 63.536-0.224l52.528-55.728C366.736 818.432 400 828.88 416 836.304l0 78.768C416 939.904 442.304 960 467.088 960l89.808 0C581.68 960 608 939.904 608 915.056l0-78.768c16-7.424 49.264-17.968 72.992-31.424l54.08 55.632c17.568 17.568 45.184 17.568 62.72 0.032l63.136-63.504c17.52-17.536 17.344-45.968-0.224-63.536l-55.728-52.528C818.432 657.248 828.88 624 836.304 608l78.768 0C939.904 608 960 581.696 960 556.912l0-89.808C960 442.304 939.904 416 915.056 416zM512 714.032c-111.6 0-202.064-90.464-202.064-202.048 0-111.6 90.464-202.064 202.064-202.064 111.616 0 202.064 90.464 202.064 202.064C714.064 623.568 623.616 714.032 512 714.032z" p-id="3561"></path></svg>
+                            个人设置
+                        </a>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">Settings</a>
-                        <a href="/logout/" class="dropdown-item">Logout</a>
+
+                        <a href="/logout/" class="dropdown-item">
+                            <svg t="1635665874309" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5044" width="200" height="200"><path d="M463.121779 125.44199c0-33.995255 29.188786-61.538565 65.182558-61.538565 35.999912 0 65.172325 27.54331 65.172325 61.538565l0 342.323553c0 33.985022-29.172413 61.533448-65.172325 61.533448-35.994796 0-65.182558-27.548426-65.182558-61.533448L463.121779 125.44199 463.121779 125.44199zM512.005117 960.095551c-224.976938 0-407.359778-172.21527-407.359778-384.640334 0-163.541727 108.297518-302.880215 260.71079-358.520443L365.356129 353.862353c-78.180594 46.232974-130.354883 128.068817-130.354883 221.592864 0 144.455019 124.027781 261.551948 277.004895 261.551948 152.98837 0 276.999778-117.096928 276.999778-261.551948 0-79.858816-38.009685-151.2334-97.760534-199.215204L691.245384 230.454696c134.977157 62.657039 228.110301 193.397708 228.110301 345.011778C919.364895 787.880281 736.982054 960.095551 512.005117 960.095551L512.005117 960.095551zM512.005117 960.095551" p-id="5045"></path></svg>
+                            退出登陆
+                        </a>
                     </div>
                 </div>
             </div>
@@ -285,7 +289,9 @@
 </div>
 
 <!-- JQ JS -->
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 <!-- Libs JS -->
 <script src="/static/tabler/dist/libs/litepicker/dist/litepicker.js"></script>
 <script src="/static/tabler/dist/libs/choices.js/public/assets/scripts/choices.js"></script>
