用户活动页面

--- a/testsite/templates/elver/builder.html
+++ b/testsite/templates/elver/builder.html
@@ -223,7 +223,18 @@
                                 </div>
                             </div>
                             <div class="tab-pane" id="tabs-profile-7">
-                                <div>Fringilla egestas nunc quis tellus diam rhoncus ultricies tristique enim at diam, sem nunc amet, pellentesque id egestas velit sed</div>
+                                <div class="justify-content-center" style="height:280px">
+                                    <div class="empty">
+                                        <div class="empty-img"><img src="/static/tabler/static/illustrations/undraw_printing_invoices_5r4r.svg"></div>
+                                        <p class="empty-title">No results found</p>
+                                        <div class="empty-action">
+                                            <a  class="btn btn-primary">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="12" y1="5" x2="12" y2="19" /><line x1="5" y1="12" x2="19" y2="12" /></svg>
+                                                添加项目
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
