--- a/testsite/templates/elver/setting.html
+++ b/testsite/templates/elver/setting.html
@@ -45,23 +45,25 @@
                                 <input type="file" class="card-btn form-control" accept="image/*" aria-label="dddd">
                             </div>
                         </div>
-                        <div class="col-md-6 col-xl-4">
-                            <div class="input-group mt-3">
+                        <div class="col-md-6 col-xl-4 mt-3">
+                            <div class="input-group">
                               <span class="input-group-text">
                                   昵称
                               </span>
                               <input type="text" class="form-control"  placeholder="请输入昵称"  autocomplete="off">
                             </div>
                         </div>
-                        <div class="col-md-6 col-xl-4">
-                            <div class="input-group mt-3">
+                        <div class="col-md-6 col-xl-4 mt-3">
+                            <div class="input-group">
                               <span class="input-group-text">
                                   手机
                               </span>
                               <input type="text" class="form-control"  placeholder="请输入手机"  autocomplete="off">
                             </div>
                         </div>
-
+                        <div class="col-md-6 col-xl-4 mt-3">
+                            <button type="submit" class="btn btn-primary">保存</button>
+                        </div>
                     </div>
                 </div>
 
